--- a/ScoreManager/packages.config
+++ b/ScoreManager/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="3.8.1" targetFramework="net45" />
+  <package id="FireSharp" version="1.1.0" targetFramework="net45" />
+  <package id="FireSharp.Serialization.JsonNet" version="1.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
   <package id="System.Management" version="4.7.0" targetFramework="net45" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net45" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net45" />
