--- a/ScoreManager/ScoreManager.csproj
+++ b/ScoreManager/ScoreManager.csproj
@@ -240,6 +240,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="dbScoreManager.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
